fix images in content (add margin, center on mobile)

--- a/RaccoonBlog.Web/Content/css/styles.less
+++ b/RaccoonBlog.Web/Content/css/styles.less
@@ -2530,6 +2530,19 @@ li.future {
     }
 
     #content {
+
+        .img-responsive {            
+            margin:10px auto;
+
+            @media (max-width: @screen-xs-max) {
+                display:block;
+                float:none !important;
+            }
+            @media (min-width: @screen-sm) {
+                margin:15px;
+            }
+        }
+
         @media (min-width: @screen-sm) {
             width: 100%;
             margin-left: 0;
